Intermediate hand and table evaluation